--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -277,7 +277,7 @@
               <div id="use-cases" class="css-1kpfjlz"><a class="css-1ogx7lw-UseCaseTile"
                   href="/store/directory?filter=grocery">
 
-                
+
 
                   <div class="css-t7c1by-UseCaseTile">
                     <div class="css-mjqirb-UseCaseTile">Grocery</div>
@@ -435,4 +435,11 @@
         </div>
       </div>
     </div>
+
+    <div class="section2" style="border: red 5px solid;">
+      <p>teste</p>
+    </div>
+
+
+
   </ion-content>
